assets/css/style.css
/* ... */
.highlight-color { color: #0055a0 }
.border-t { border-top: 1px solid #d8dfe5 }
.border-b { border-bottom: 1px solid #d8dfe5 }
.border-tb {
    border-bottom: 1px solid #d8dfe5;
    border-top: 1px solid #d8dfe5;
}

/*  css3 columns on paragraphs only
================================================== */
p.two-columns {
    -moz-column-count: 2;
    -moz-column-gap: 5%;
    -webkit-column-count: 2;
    -webkit-column-gap: 5%;
    column-count: 2;
    column-gap: 5%;
}
p.three-columns {
    -moz-column-count: 3;
    -moz-column-gap: 3%;
    -webkit-column-count: 3;
    -webkit-column-gap: 3%;
    column-count: 3;
    column-gap: 3%;
}

/*  clearing
================================================== */
.span2, .span3, .span4, .span8, .span6, .span5, .span9, .span12, .widget, .summary-wrapper { *zoom: 1}
.span2:before, .span3:before, .span4:before, .span8:before, .span6:before, .span5:before, .span9:before, 
.span12:before, .widget:before, .summary-wrapper:before, .span2:after, .span3:after, .span4:after, 
.span8:after, .span6:after, .span5:after, .span9:after, .span12:after, .widget:after, .summary-wrapper:after 
{display: table; content: ""; line-height: 0;}

.span2:after, .span3:after, .span4:after, .span8:after, .span6:after, .span5:after, .span9:after, .span12:after, .widget:after, .summary-wrapper:after 
{clear: both}

/*  webkit fix
================================================== */
input[type="text"], input[type="password"], input[type="search"], input[type="email"], input[type="tel"], input[type="url"]
{-webkit-appearance: textfield; }

/*	bootstrap hero-unit reset
============================================================ */
.hero-unit {
    position: relative;
    clear: both;
    margin: -1% 0 0 0;
    padding: 0 0 2% 0;
    background: transparent;
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
}

.hero-unit h1,
.hero-unit h2 {
    margin: 0;
    background: url(../images/hr.png) 0 100% repeat-x;
    padding-bottom: 20px;
    font-size: 200%;
    font-weight: 300;
    line-height: 1.2;
    margin:0;
    color:#0055a0;
}

.hero-unit h2 {
	font-size:130%!important;
	color:#7ab2dc;
}
.hero-unit.center {
    text-align: center;
}
.hero-unit.center {
    text-align: center;
}
.hero-unit.no-padding-bottom h1, 
.hero-unit.no-padding-bottom h2 
{padding-bottom:0;}

.hero-unit.no-border h1, 
.hero-unit.no-border h2 
{background:none;}


/* well
================================================== */
.well {
    background:#d4ecff;
    padding:2% 5%;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
	border:none;
    -webkit-box-shadow:	none;
    -moz-box-shadow: 	none;
    box-shadow: 		none;
}
.well h2 { margin-top:0;}
	.telephoneLarge {
	font-size:30px;
	}
	.contactInfo {
	font-size:18px;
	}
	.icontext {
		font-size:15px;
		margin-left:15px;
	}
	.infoMenu a {
		color:#0055a0;
		text-decoration:none;
	}
	.infoMenu a:hover {
		color:#7ab2dc;
		text-decoration:none;
	}



/* call to action
================================================== */
.call-to-action {
	position:relative;
	text-align:center;
	padding:25px 0 28px 0;
	margin-bottom:20px;
	border-top:4px double #c8d2da;
	border-bottom:4px double #c8d2da;
}
.call-to-action h3 {
	margin-top:0;
	margin-bottom:1.5%;
	font-size:220%;
}
.call-to-action p {
    font-size:120%;
}

/* Call to Action Traditional Layout : Message Left Button Right */
.call-to-action.trad .message {float:left;width:75%;text-align:left;margin-right:5%}
.call-to-action.trad .message p:last-child {margin-bottom:0;}
.call-to-action.trad .action {float:right;width:20%;text-align:right;padding-top:2%;}


/* basic image slider
================================================== */
.lt-ie8 .flexslider.image-slider.span6 {margin-left:0;margin-right:0;}

.image-slider.flexslider {
    margin-bottom: 2%;
    position: relative;
}
.image-slider.flexslider .flex-direction-nav a:hover { background-color: #a3b0bb }

.image-slider.flexslider .flex-direction-nav a {
    position: absolute;
    z-index: 200;
    top: 30%;
    right: 0;
    width: 30px;
    border:1px solid #fff;
    border-right:0px;
    height: 50px;
    text-indent: -9999px;
    display: block;
    background: #4c5966 url(../images/sliderarrows.png) -80px 50% no-repeat;
}
.image-slider.flexslider .flex-direction-nav .flex-prev {
    right: auto;
    left:0;
    border-left:0px;
    border-right:1px solid #fff;
    left: auto;
    background-position: -110px 50%;
}
.image-slider.flexslider .caption {
	text-align: left; 
	margin-top:0px;
	padding:10px 0;
	clear:both;
	font-size:90%;
	font-style:italic;
	background: url(../images/hr.png) 0 100% repeat-x;
}
.image-slider.flexslider .caption.no-border {
	background: none;
}
.image-slider.flexslider .caption p:last-child {margin-bottom:0;}
.image-slider.flexslider .flex-direction-nav .flex-disabled,
.image-slider.flexslider .flex-direction-nav .disabled {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
    filter: alpha(opacity=30);
    -moz-opacity: 0.3;
    -khtml-opacity: 0.3;
    opacity: 0.3;
    cursor: default;
}

/* columns structure / sidebars
================================================== */

/* used on the home page to put the .well before the testimonials &
  on the contact page to put the form before the address on desktop */
  
.row-fluid.reverse-order .span4, .row-fluid.reverse-order .span5 {float:right;} 
.row-fluid.reverse-order .span8, .row-fluid.reverse-order .span7 {margin-left:0;}

/****** widget base ******/
.widget {
	margin:0 0 30px 0;
	clear:both;
}

/******  left sidebar layout ******/
.row-fluid.sidebar-left .span3 {
	float:left;
	margin-left:0;
}
.row-fluid.sidebar-left .span9 {
	float:right;
	margin-right:0;
}
.sidebar-left {
	background-image: url(../images/rule.png);
	background-position: 23.5% 0;
	background-repeat: repeat-y;
}
.sidebar-left .secondary-column .widget {padding-right:20px;}
/* ... */

